# REngine_2.0

./: .gitignore  CMakeLists.txt  README.md  so my stupid ass doesn't somehow forgets build commands.txt
Lib/: mimalloc.lib
Lib/bgfx/: bimgRelease.lib  bimg_decodeRelease.lib  bxRelease.lib
Tools/netradiant_source/docs/: Complete_list_of_command_line_parameters.htm
Tools/netradiant_source/libs/: commandlib.d  etclib.d  layers.h  scenelib.h  traverselib.h
Tools/netradiant_source/radiant/: autosave.d  brush.d  brush_primit.d  brushmanip.d  brushmodule.d  brushnode.d  brushtokens.d  brushxml.d  build.d  camwindow.d  clippertool.d  colors.d  commands.d  console.d  csg.d  dialog.d  eclass.d  eclass_def.d  eclass_doom3.d  eclass_fgd.d  eclass_xml.d  entity.d  entityinspector.d  entitylist.d  environment.d  error.d  feedback.d  filetypes.d  filterbar.d  filters.d  findtexturedialog.d  glwidget.d  grid.d  groupdialog.d  gtkdlgs.d  gtkmisc.d  help.d  image.d  layerswindow.cpp  main.d  (+45 more)
bac/Engine/: AssetRegisty.cpp  BoundingSphere.hpp  Camera.cpp  DebugDraw.hpp  Engine.vcxproj  Entity.hpp  IDrawMesh.h  ImGuiEngineImpl.h  Input.cpp  Input.h  Level.cpp  LevelObject.hpp  Physics.h  SkeletalMesh.hpp  StaticMesh.hpp  ThreadPool.cpp  animator.cpp  animator.hpp  gl.h
bac/Engine/Helpers/: JsonMacros.hpp
bac/Engine/LightSystem/: LightManager.cpp  LightManager.h
bac/Engine/Navigation/: Navigation.cpp  PathFollowQuery.h
bac/Engine/Particle/: ParticleEmitter.h  ParticleSystem.hpp  RibbonEmitter.cpp  RibbonEmitter.h
bac/Engine/Renderer/: Renderer.h
bac/Engine/SaveSystem/: EntitySaveData.h  LevelSaveData.h  LevelSaveSystem.h
bac/Engine/SoundSystem/: SoundInstance.hpp  SoundManager.hpp
bac/Engine/UI/: UiElement.cpp
bac/Engine/imgui/: imgui_impl_sdl2.cpp
bac/Game/: Game.vcxproj  Game.vcxproj.filters
bac/Game/Entities/: Spawner.cpp
bac/Game/ParticleSystems/: BulletTrail.cpp  HitBlood.cpp
emscriptenLibraries/AL/: alext.h
libraries/AL/: efx.h
source/: BrushFaceMesh.hpp  Camera.cpp  EngineMain.cpp  EngineMain.h  Entity.hpp  Input.cpp  Level.cpp  Level.hpp  LevelObject.hpp  MapData.cpp  MathHelper.hpp  Physics.cpp  Physics.h  SdlWasmEngine.sln  SdlWasmEngine.vcxproj  SdlWasmEngine.vcxproj.filters  Shader.hpp  SkeletalMesh.hpp  StaticMesh.hpp  Texture.hpp  ThreadPool.cpp  VertexData.h  animator.cpp  imgui.ini  log.txt  main.cpp  model.hpp  quicksave.sav  skinned_model.cpp  skinned_model.hpp
source/BehaviourTreeEditor/: BehaviourTreeEditor.vcxproj  BehaviourTreeEditor.vcxproj.filters  GameStart.cpp
source/BehaviourTreeEditor/BehaviourTree/: BTVariable.cpp  BTVariable.h  BehaviorTree.cpp  BehaviorTree.h  BehaviorTreeEditor.cpp  BehaviorTreeEditor.h  BehaviorTreeTypes.h  Blackboard.cpp  Blackboard.h  CompositeNode.h  CompositeNodes.cpp  CompositeNodes.h  CustomTask.cpp  CustomTask.h  DecoratorNodes.cpp  DecoratorNodes.h  HoldTask.h  NodeFactory.cpp  NodeFactory.h  TaskNodes.h  TreeNode.cpp  TreeNode.h
source/Distribution/: ShooterGame.exp  ShooterGame.lib
source/Engine/: Animation.h  Animator.h  AssetRegistry.cpp  AssetRegistry.h  AssetRegisty.h  BoundingBox.hpp  BoundingSphere.hpp  BrushFaceMesh.hpp  Camera.cpp  DebugDraw.cpp  DebugDraw.hpp  Delay.hpp  EObject.hpp  Engine.vcxproj  EngineMain.cpp  EngineMain.h  Entity.cpp  Entity.h  Entity.hpp  FogManager.h  FrustrumCull.hpp  IDrawMesh.h  ImGuiEngineImpl.h  Input.cpp  Input.h  Level.cpp  Level.hpp  LevelObject.hpp  LevelObjectFactory.cpp  LevelObjectFactory.h  Logger.hpp  MapData.cpp  MapData.h  MapParser.cpp  MapParser.h  MathHelper.hpp  MeshUtils.cpp  MeshUtils.hpp  Physics.cpp  Physics.h  (+34 more)
source/Engine/AiPerception/: AiPerceptionSystem.cpp  AiPerceptionSystem.h  ObservationTarget.h  Observer.cpp  Observer.h
source/Engine/BSP/: Quake3Bsp.cpp  Quake3Bsp.h
source/Engine/BehaviourTree/: BTVariable.cpp  BTVariable.h  BehaviorTree.cpp  BehaviorTree.h  BehaviorTreeEditor.cpp  BehaviorTreeEditor.h  BehaviorTreeTypes.h  Blackboard.cpp  Blackboard.h  CompositeNodes.cpp  CompositeNodes.h  CustomTask.cpp  CustomTask.h  DecoratorNodes.cpp  DecoratorNodes.h  HoldTask.cpp  NodeFactory.cpp  NodeFactory.h  TaskNodes.cpp  TaskNodes.h  TreeNode.cpp  TreeNode.h
source/Engine/Character/: CharacterController.cpp  CharacterController.h
source/Engine/Entities/: Player.hpp  PointLight.cpp  PointLight.h  SoundPlayer.cpp  SoundPlayer.h  Spawner.h  StaticMeshEntity.h  TestNpc.hpp  (+3 more)
source/Entities/: Player.cpp  Player.hpp  TestCube.hpp  TestNpc.cpp  TestNpc.hpp  TestParticleSystem.cpp  TestParticleSystem.hpp
source/Game/: Game.vcxproj  Game.vcxproj.filters  GameStart.cpp
source/GameData/: dog.glb  dog.glb.skmm  testViewmodel.glb
source/MauiPlayer/: ApkBuild.txt  App.xaml.cs  AppShell.xaml  LocalWebServer.cs  MainPage.xaml  MainPage.xaml.cs  MauiPlayer.csproj  MauiProgram.cs
source/Navigation/: Navigation.cpp  Navigation.hpp  PathFollowQuery.cpp  PathFollowQuery.h
source/Particle/: GlobalParticleSystem.cpp  GlobalParticleSystem.hpp  ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.hpp
source/ParticleSystems/: HitBlood.cpp
source/SaveData/: quicksave.sav
source/ShaderOptimizer/: ShaderOptimizer.cpp  ShaderOptimizer.vcxproj  ShaderOptimizer.vcxproj.filters
source/SkeletalEditor/: GameStart.cpp  SkeletalEditor.vcxproj  SkeletalEditor.vcxproj.filters  WorldSpawn.cpp
source/imgui/: imgui.cpp  imgui_impl_sdl2.cpp
sourceAssets/: cane.blend  cane.blend1  dog.blend  dog.blend1  human.blend  pistol_new_.blend  pistol_new_.blend1  player_coat.blend  player_coat.blend1  revolver_model.blend  revolver_model.blend1  shotgun_lever.blend  shotgun_lever.blend1  shotgun_model.blend  shotgun_model.blend1  tommy_model.blend
sourceAssets/HorrorGame/: arms.blend  arms.blend1
sourceAssets/ShooterGame/: arms.blend  cane.blend  human.blend  human.blend1  pistol_new_.blend  pistol_new_.blend1  player_coat.blend1  tommy.blend  tommy.blend1  tommy_model.blend1
sourceLibraries/: ReadMe.txt
sourceLibraries/assimp-master/: assimp.pc
sourceLibraries/glsl-optimizer-master/: CMakeLists.txt
temp/assimp-master/: cmake_uninstall.cmake
(+1489 files in other folders)
